deployment/users-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: app-backends
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
        version: "v2-dev"
    spec:
      containers:
      - name: users-server
        image: eu.gcr.io/uob-tv-project-dev/users-server:1-4
        imagePullPolicy: Always
        ports:
          - containerPort: 6000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        volumeMounts:
          - name: gcp-credentials
            mountPath: "/etc/gcp-credentials"
            readOnly: true
      volumes:
      - name: gcp-credentials
        secret:
          secretName: api-backend-sa-credential
