deployment/users-server/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: users-service
  namespace: app-backends
spec:
  selector:
    app: users
  ports:
  - port: 6000
    targetPort: 6000
